--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ buildscript {
 
 apply plugin: 'forge'
 
+sourceCompatibility = '1.7'
+targetCompatibility = '1.7'
+
 //include "config.gradle"
 
 //version = "1.0"
