--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,11 @@ archivesBaseName = jarName
 repositories {
     maven { url = "http://maven.cil.li/" }
     maven { url = "http://maven.ic2.player.to" }
+    maven { url = "http://repo.spongepowered.org/maven" }
 }
 
 dependencies {
+    compile files('lib/spongeforge-1.12.2-2586-7.1.0-BETA-2873.jar')
     compile "li.cil.oc:OpenComputers:MC1.12.1-1.7.1.52"
     compile "net.industrial-craft:industrialcraft-2:2.8.9-ex112:api"
     compile files('lib/ComputerCraft1.80pr1.jar')
