--- a/build.gradle
+++ b/build.gradle
@@ -37,11 +37,14 @@ repositories {
 }
 
 dependencies {
-    compile "org.spongepowered:spongeforge:1.12.2-2705-7.1.0-BETA-3338:dev"
+    compile ("org.spongepowered:spongeforge:1.12.2-2705-7.1.0-BETA-3338:dev") {
+        exclude module: 'testplugins'
+        exclude module: 'testmods'
+    }
     compile "li.cil.oc:OpenComputers:MC1.12.1-1.7.1.52"
-    compile "net.industrial-craft:industrialcraft-2:2.8.9-ex112:api"
+    compile "net.industrial-craft:industrialcraft-2:2.8.93-ex112:api"
     deobfCompile "dan200.computercraft:ComputerCraft:1.80pr1-build4"
-    deobfCompile ('net.malisis:malisiscore:1.12.2-6.4.1-SNAPSHOT') {
+    deobfCompile ('com.almuradev:malisiscore:1.12.2-6.4.1-SNAPSHOT') {
         transitive = false
     }
 }
@@ -50,7 +53,7 @@ deobfMcMCP { failOnAtError = false }
 deobfMcSRG { failOnAtError = false }
 
 minecraft {
-    version = "1.12.2-14.23.3.2655"
+    version = "1.12.2-14.23.4.2705"
     runDir = "run"
     mappings = 'snapshot_20180114'
     useDepAts = true
