--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,10 @@ repositories {
 }
 
 dependencies {
+    compile ("org.spongepowered:spongeforge:1.12.2-2705-7.1.0-BETA-3380:dev") {
+        exclude module: 'testplugins'
+        exclude module: 'testmods'
+    }
     compile "li.cil.oc:OpenComputers:MC1.12.1-1.7.1.52"
     compile "net.industrial-craft:industrialcraft-2:2.8.93-ex112:api"
     deobfCompile "dan200.computercraft:ComputerCraft:1.80pr1-build4"
