--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-version = 1.14.3-mc1.12.2-sponge
+version = 1.15.0-SF-api-7-release
 mcversion = [1.12.2,1.12.2]
 group = gcewing.sg
 jarName = SGCraft
+org.gradle.daemon=false
