--- a/build.gradle
+++ b/build.gradle
@@ -9,19 +9,34 @@ buildscript {
         maven {
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+        maven {
+            name = 'sponge'
+            url = 'https://repo.spongepowered.org/maven'
+        }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath 'org.spongepowered:mixingradle:0.6+'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'org.spongepowered.mixin'
 
-//Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
+sourceSets {
+    main {
+        refMap = "mixins.sgcraft.refmap.json"
+    }
+}
 
+jar {
+    manifest.attributes(
+            'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
+            'MixinConfigs': 'mixins.sgcraft.json',
+            'FMLCorePluginContainsFMLMod': 'true',
+    )
+}
 
-//version = "1.0"
-//group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = jarName
 
 repositories {
@@ -37,13 +52,16 @@ repositories {
 }
 
 dependencies {
-    compile ("org.spongepowered:spongeforge:1.12.2-2705-7.1.0-BETA-3380:dev") {
+    compile ("org.spongepowered:spongeforge:1.12.2-2705-7.1.0-BETA-3338:dev") {
         exclude module: 'testplugins'
         exclude module: 'testmods'
     }
     compile "li.cil.oc:OpenComputers:MC1.12.1-1.7.1.52"
     compile "net.industrial-craft:industrialcraft-2:2.8.93-ex112:api"
     deobfCompile "dan200.computercraft:ComputerCraft:1.80pr1-build4"
+    deobfCompile ('com.almuradev:malisiscore:1.12.2-6.4.1-SNAPSHOT') {
+        transitive = false
+    }
 }
 
 deobfMcMCP { failOnAtError = false }
@@ -54,19 +72,6 @@ minecraft {
     runDir = "run"
     mappings = 'snapshot_20171007'
     useDepAts = true
-
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not allways work.
-    // simply re-run your setup task after changing the mappings to update your workspace.    
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-}
-
-sourceSets.main {
-	compileClasspath += files("lib")
-	java.srcDirs "src/base", "src/mod"
-	resources.srcDirs "src/resources"
 }
 
 sourceSets.main {
