Fix Mod not loading...
Signed-off-by: Dockter <dockter@almuramc.com>

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ jar {
             'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
             'MixinConfigs': 'mixins.sgcraft.json',
             'FMLCorePluginContainsFMLMod': 'true',
+            'ForceLoadAsMod': true
     )
 }
 
