--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ repositories {
 }
 
 dependencies {
-    compile ("org.spongepowered:spongeforge:1.12.2-2705-7.1.0-BETA-3338:dev") {
+    compile ("org.spongepowered:spongeforge:1.12.2-2768-7.1.3-RC3497:dev") {
         exclude module: 'testplugins'
         exclude module: 'testmods'
     }
@@ -69,9 +69,9 @@ deobfMcMCP { failOnAtError = false }
 deobfMcSRG { failOnAtError = false }
 
 minecraft {
-    version = "1.12.2-14.23.4.2705"
+    version = "1.12.2-14.23.5.2768"
     runDir = "run"
-    mappings = 'snapshot_20171007'
+    mappings = 'snapshot_20180808'
     useDepAts = true
 }
 
