--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,3 @@
-version = 1.15.8-alpha-features-release
-mcversion = [1.12.2,1.12.2]
-group = gcewing.sg
+version = 1.15.9
+mcversion = 1.12.2
 jarName = SGCraft
