Fixes:  - Fixed error with SGBaseTE placement not creating TE's address when logEvents was disabled.  - Implemented first phase of Permissions System  - Fixed assumptions made regarding FIFO NBT data during creation of new tileEntities.
Signed-off-by: Dockter <dockter@almuramc.com>

--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ repositories {
 }
 
 dependencies {
+    compile ("org.spongepowered:spongeforge:1.12.2-2768-7.1.6-RC3621:dev") {
+        exclude module: 'testplugins'
+        exclude module: 'testmods'
+    }
     compile "org.spongepowered:mixin:0.7.11-SNAPSHOT"
     compile 'org.spongepowered:configurate-yaml:3.6'
     compile 'org.spongepowered:configurate-core:3.6'
