--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,10 @@ repositories {
     maven { url = "http://maven.ic2.player.to" }
     maven { url = "http://repo.spongepowered.org/maven" }
     maven { url = "http://cc.crzd.me/maven/" }
+    maven {
+        name = 'CoFH Maven'
+        url = 'http://maven.covers1624.net'
+    }
     flatDir {
         dirs "lib"
     }
@@ -67,9 +71,17 @@ dependencies {
     compile 'org.spongepowered:configurate-yaml:3.6'
     compile 'org.spongepowered:configurate-core:3.6'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'commons-io:commons-io:2.7-SNAPSHOT'
     compile "li.cil.oc:OpenComputers:MC1.12.1-1.7.1.52"
     compile "net.industrial-craft:industrialcraft-2:2.8.93-ex112:api"
     deobfCompile "dan200.computercraft:ComputerCraft:1.80pr1-build4"
+    deobfCompile "cofh:RedstoneFlux:1.12-2.1.0.6:universal"
+    deobfCompile "codechicken:CodeChickenLib:1.12.2-3.2.3.358:universal"
+    deobfCompile "cofh:CoFHCore:1.12.2-4.6.3.27:universal"
+    deobfCompile "cofh:CoFHWorld:1.12.2-1.3.1.7:universal"
+    deobfCompile "cofh:ThermalExpansion:1.12.2-5.5.3.41:universal"
+    deobfCompile "cofh:ThermalFoundation:1.12.2-2.6.2.26:universal"
+    deobfCompile "cofh:ThermalDynamics:1.12.2-2.5.5.21:universal"
     deobfCompile ('com.almuradev:malisiscore:1.12.2-6.5.1-SNAPSHOT') {
         transitive = false
     }
