--- a/build.gradle
+++ b/build.gradle
@@ -63,23 +63,25 @@ dependencies {
     compile "li.cil.oc:OpenComputers:MC1.12.1-1.7.1.52"
     compile "net.industrial-craft:industrialcraft-2:2.8.93-ex112:api"
     deobfCompile "dan200.computercraft:ComputerCraft:1.80pr1-build4"
-    compile "cofh:RedstoneFlux:1.12-2.1.0.6:deobf"
-    compile "codechicken:CodeChickenLib:1.12.2-3.2.3.358:deobf"
-    compile "cofh:CoFHCore:1.12.2-4.6.3.27:deobf"
-    compile "cofh:CoFHWorld:1.12.2-1.3.1.7:deobf"
-    compile "cofh:ThermalExpansion:1.12.2-5.5.3.41:deobf"
-    compile "cofh:ThermalFoundation:1.12.2-2.6.2.26:deobf"
-    compile "cofh:ThermalDynamics:1.12.2-2.5.5.21:deobf"
-    deobfCompile ('com.almuradev:malisiscore:1.12.2-6.5.1-SNAPSHOT') { transitive = false }
+    deobfCompile "cofh:RedstoneFlux:1.12-2.1.0.6:universal"
+    deobfCompile "codechicken:CodeChickenLib:1.12.2-3.2.3.358:universal"
+    deobfCompile "cofh:CoFHCore:1.12.2-4.6.3.27:universal"
+    deobfCompile "cofh:CoFHWorld:1.12.2-1.3.1.7:universal"
+    deobfCompile "cofh:ThermalExpansion:1.12.2-5.5.3.41:universal"
+    deobfCompile "cofh:ThermalFoundation:1.12.2-2.6.2.26:universal"
+    deobfCompile "cofh:ThermalDynamics:1.12.2-2.5.5.21:universal" 
+    deobfCompile ('com.almuradev:malisiscore:1.12.2-6.5.1-SNAPSHOT') { 
+		transitive = false
+	}
 }
 
 deobfMcMCP { failOnAtError = false }
 deobfMcSRG { failOnAtError = false }
 
 minecraft {
-    version = "1.12.2-14.23.5.2847"
+    version = "1.12.2-14.23.5.2838"
     runDir = "run"
-    mappings = 'snapshot_20180814'
+    mappings = 'snapshot_20180808'
     useDepAts = true
     makeObfSourceJar = false
 }
